# ninjxt-poc

./: .gitignore  build.gradle.kts  settings.gradle.kts
injector/: Cargo.toml
injector/src/: bin.rs  lib.rs
payload/: Cargo.toml
payload/src/: lib.rs
runtime-target/: build.gradle.kts
runtime-target/src/main/java/me/xtrm/ninjxt/poc/runtime/: Main.java
